# rust-3d

./: .gitignore  Cargo.toml  LICENSE  README.md  WorkspaceLayout.md  test.md
.github/workflows/: ci.yml
app_native/: Cargo.toml
app_native/src/: main.rs
app_web/: Cargo.toml  index.html
app_web/src/: lib.rs
assets/: config.toml
core/: Cargo.toml
core/src/: config.rs  lib.rs  state.rs
docs/: CAMERA.md  RENDER_PIPELINE.md  SHADER_GUIDE.md
docs/ADR/: 0000-example.md
docs/ai/: ARCHITECTURE.md  CODING_RULES.md  CONTRIBUTING.md  DECISIONS.md  INDEX.md  LINTING.md  NAMING.md  PROMPT.md  QA_HINTS.md  SEARCH_MAP.md  ai-index.yaml
engine/: Cargo.toml
engine/src/: lib.rs
examples/desktop/integration_min/: Cargo.toml
examples/desktop/integration_min/src/: main.rs
examples/web/integration_min/: Cargo.toml  index.html
examples/web/integration_min/src/: lib.rs
game/: Cargo.toml
game/src/: config.rs  lib.rs  state.rs
platform/desktop/: Cargo.toml
platform/desktop/src/: lib.rs  main.rs
platform/web/: Cargo.toml  Trunk.toml  index.html
platform/web/src/: lib.rs
render/: Cargo.toml
render/shaders/: grid.wgsl
render/src/: color.rs  config.rs  desktop.rs  grid.rs  lib.rs  renderer.rs  web.rs
render/src/debug/: fps.rs  mini_text.rs  mod.rs  overlay.rs  ui_textured_quad.wgsl
render/src/gpu/: bind_group.rs  buffer.rs  depth_target.rs  instance.rs  mod.rs  msaa.rs  pipeline_cache.rs  shader.rs  surface.rs  texture.rs
render/src/io/: mesh_loader.rs  mod.rs  shader_loader.rs  texture_loader.rs
render/src/math/: transform.rs
render/src/passes/: grid.rs  main_opaque.rs  mod.rs
render/src/pipelines/: depth.rs  gizmo.rs  grid.rs  mod.rs
render/src/platform/: desktop.rs  mod.rs  web.rs
render/src/renderer/: core.rs  frame.rs  mod.rs  pass_manager.rs  prelude.rs  renderer.rs  state.rs  targets.rs
render/src/renderer/frame/: acquire.rs  main_pass.rs  mod.rs
render/src/renderer/targets/: depth.rs  mod.rs  msaa.rs
render/src/scene/: camera.rs  material.rs  mesh.rs  mod.rs  primitives.rs
xtask/: Cargo.toml  README.md
xtask/src/: cli.rs  config.rs  main.rs  run.rs  summary.rs
xtask/src/render/: header.rs  mod.rs  tree.rs  utils.rs
xtask/src/render/summaries/: classify.rs  collector.rs  mod.rs  model.rs  writer.rs
xtask/src/tree/: build.rs  mod.rs  model.rs  scan.rs  util.rs
