[workspace]
members = [
  "xtask",
  "render",
  "engine",
  "platform/desktop",
  "platform/web",
  "examples/*/*"
]
resolver = "2"

[workspace.dependencies]
winit    = "0.30.12"
wgpu     = "26.0.1"
anyhow   = "1"
bytemuck = { version = "1.14", features = ["derive"] }
serde    = { version = "1", features = ["derive"] }
toml     = "0.9.5"
pollster = "0.4.0" 
