[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
platform_desktop = { path = "../platform/desktop" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
platform_web = { path = "../platform/web" }
