[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
game = { path = "../game" }
winit = "0.29"
wgpu = "0.20"
bytemuck = { version = "1.14", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.20", features = ["webgl"] }
