[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
game     = { path = "../game" }
wgpu     = { workspace = true }      # ← デスクトップ/WEB 両方で使う
winit    = { workspace = true }
anyhow   = { workspace = true }
bytemuck = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["webgpu"] }

[features]
default = []
msaa4 = []
