[package]
name = "app_web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
game   = { path = "../../game" }
render = { path = "../../render" }
winit = { workspace = true, features = ["rwh_05"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"

web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CssStyleDeclaration",
  "DomRect",
  "Performance",
  "Event",
  "MouseEvent",
  "KeyboardEvent",
  "ResizeObserver",
  "Response",
  "console"
] }
