[package]
name = "platform_web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow               = { workspace = true }
wgpu                 = { workspace = true }
render               = { path = "../../render" }
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window","Document","HtmlCanvasElement","console"] }
